--- a/style.css
+++ b/style.css
@@ -9,7 +9,16 @@ body{
     padding: 10px 20px;
     font-size: 20px;
     border-radius: 10px;
+    cursor: pointer;
 }
 #container{
     border: 1px green solid;
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: repeat(10, 1fr);
+    gap: 0
+    
+}
+.grid{
+    border: 1px black solid;
 }
